[package]
name = "sample"
version = "0.1.0"
authors = ["Shisei Hanai <ruimo.uno@gmail.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#eframe = "0.18" # Gives us egui, epi and web+native backends
eframe = "0.19"
egui_extras = { version = "0.19.0", features = ["svg"] }
tiny-skia = "0.6.6"
resvg = "0.23"
usvg = "0.23"

[features]
